[gd_scene load_steps=8 format=3 uid="uid://dtgqvswj2fi7m"]

[ext_resource type="Script" path="res://main.gd" id="1_5ypww"]
[ext_resource type="PackedScene" uid="uid://ccik60amxpcrt" path="res://player.tscn" id="1_20l1x"]
[ext_resource type="PackedScene" uid="uid://2cf4fd2fu4ni" path="res://opponent.tscn" id="2_sg144"]
[ext_resource type="PackedScene" uid="uid://che3uecs57kbr" path="res://ball.tscn" id="3_wyjut"]
[ext_resource type="FontFile" uid="uid://ciugi4kuu5ine" path="res://Pong Assets/ARCADECLASSIC.TTF" id="5_jgqsu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jautp"]
size = Vector2(1162, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxtpl"]
size = Vector2(72, 657)

[node name="main" type="Node"]
script = ExtResource("1_5ypww")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 1154.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_20l1x")]
position = Vector2(64, -31)

[node name="TopWall" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(571, -6)
shape = SubResource("RectangleShape2D_jautp")

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(0, 660)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(576, -6)
shape = SubResource("RectangleShape2D_jautp")

[node name="Opponent" parent="." instance=ExtResource("2_sg144")]
position = Vector2(1079, -31)

[node name="Ball" parent="." instance=ExtResource("3_wyjut")]
position = Vector2(571, 289)
scale = Vector2(0.5, 0.5)

[node name="LeftWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-47, 329.5)
shape = SubResource("RectangleShape2D_xxtpl")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(1245, -8)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(-47, 329.5)
shape = SubResource("RectangleShape2D_xxtpl")

[node name="PlayerScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -283.5
offset_right = -159.5
offset_bottom = -260.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_jgqsu")
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="OpponentScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -285.0
offset_right = 165.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_jgqsu")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="LeftWall" to="." method="_on_left_wall_body_entered"]
[connection signal="body_entered" from="RightWall" to="." method="_on_right_wall_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
